<resources>
    <string name="app_name">Segurados</string>
    <string name="title_perfil">Perfil</string>
    <string name="title_jogar">Jogar</string>
    <string name="title_ranking">Ranking</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="btn_editar">Editar</string>
    <string name="meu_perfil">Meu Perfil</string>
    <string name="nome_jogador">Nome do jogador</string>
    <string name="pontos_jogador">Pontos do Jogador</string>
    <string name="qtd_questoes">Qtd de questões</string>
    <string name="posicao_jogador">1</string>
    <string name="qtd_perguntas_t">quests Respondidas</string>
    <string name="pontoss">pts</string>
    <string name="girar">girar</string>
    <string name="resposta_correta">Resposta Correta!</string>
    <string name="pontuacao">Pontuacao: 0</string>
    <string name="finalizar">Finalizar</string>
    <string name="continuar">Continuar</string>
    <string name="pergunta">Pergunta ?</string>

    <string name="title_activity_login2">Sign in</string>
    <string name="prompt_email">Nome de usuario</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_password2">Repita a Senha</string>
    <string name="prompt_name">Nome</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
