<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10pt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ui.CadastrarUsuario.CadastrarseFragment">

    <ImageView
        android:layout_width="70pt"
        android:layout_height="70pt"
        android:src="@mipmap/icone_"/>

    <TextView
        android:text="Segurados"
        android:textSize="12pt"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <View
        android:layout_width="70pt"
        android:layout_height="1pt"
        android:background="#808080"
        android:layout_gravity="center"
        android:layout_marginTop="2pt" />

    <TextView
        android:text="Cadastro"
        android:textSize="12pt"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5pt"/>



    <androidx.cardview.widget.CardView
        android:layout_marginTop="20pt"
        android:elevation="10pt"
        app:cardCornerRadius="5pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="10pt"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <AutoCompleteTextView
                android:layout_marginTop="5pt"
                android:id="@+id/edtNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_name"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />


            <AutoCompleteTextView
                android:layout_marginTop="5pt"
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />


            <EditText
                android:layout_marginTop="5pt"
                android:id="@+id/edtSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:layout_marginTop="5pt"
                android:id="@+id/edtRepitaSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <Button
                android:id="@+id/btnEscolherFoto"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Escolher foto de perfil" />

            <Button
                android:layout_marginTop="5pt"
                android:background="@color/colorPrimary"
                android:id="@+id/btnCadastrar"
                android:textColor="#ffffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="CADASTRAR" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>