<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2pt">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e0e0e0"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_posicao_r"
                android:layout_width="15pt"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5pt"
                android:text="@string/posicao_jogador"
                android:textSize="9pt" />


            <FrameLayout
                android:layout_width="25pt"
                android:layout_height="25pt">

                <ProgressBar
                    android:id="@+id/progress_bar_r"
                    style="@style/Widget.AppCompat.ProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_perfil_r"
                    android:layout_width="25pt"
                    android:layout_height="25pt"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_profile" />
            </FrameLayout>


            <TextView
                android:id="@+id/txt_usuario_r"
                android:layout_width="60pt"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/nome_jogador"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txt_pontuacao_r"

                android:layout_width="55pt"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="end"
                android:text="@string/pontos_jogador" />

            <ImageView
                android:id="@+id/star_r"
                android:layout_width="10pt"
                android:layout_height="10pt"
                android:layout_gravity="center"
                android:layout_marginStart="5pt"
                android:scaleType="center"
                android:visibility="invisible"
                app:srcCompat="@drawable/ic_best" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1pt"
            android:layout_gravity="bottom"
            android:background="@color/colorPrimaryDark" />
    </LinearLayout>
</androidx.cardview.widget.CardView>